[package]
name = "osprey"
version = "0.1.0"
authors = ["Chuck <hi@chuck.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.1"
postgres = "0.19.1"
sha2 = "0.9.8"
clap = { version = "3.0.6", features = ["derive"] }

